# EntropIA-Lite

./: .gitignore  AUDIT_AND_PLAN.html  AUDIT_AND_PLAN.md  DEB_BUILD_STEPS.md  MICROSOFT_STORE_MSIX_SPIKE.md  MSIX_BUILD_STEPS.md  PRIVACY.en.md  PRIVACY.md  README.en.md  README.md  THIRD_PARTY_NOTICES.en.md  THIRD_PARTY_NOTICES.md  opencode.json  package.json  pnpm-lock.yaml
.github/workflows/: build-linux.yml  ci.yml  lockfile-reset.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.svelte  App.test.ts  app.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.dev2.conf.json  tauri.linux.conf.json
apps/desktop/src-tauri/resources/: README.en.md  README.md
apps/desktop/src-tauri/resources/lib/linux-x86_64/: README.en.md  README.md
apps/desktop/src-tauri/scripts/tests/: build-linux-workflow.Tests.ps1  rust-quality-contract.Tests.ps1  rust-verify-gate.Tests.ps1
apps/desktop/src-tauri/src/: app_logs.rs  image_edit.rs  lib.rs  main.rs  settings.rs
apps/desktop/src-tauri/src/db/: commands.rs  state.rs  util.rs
apps/desktop/src-tauri/src/llm/: commands.rs  mod.rs  openrouter.rs  prompt.rs
apps/desktop/src-tauri/src/nlp/: chunking.rs  commands.rs  embeddings.rs  fts.rs  mod.rs  vector.rs
apps/desktop/src-tauri/src/nlp/ner/: mod.rs  openrouter.rs
apps/desktop/src-tauri/src/ocr/: commands.rs  debug_viz.rs  glm_ocr.rs  mod.rs  pdf.rs  pdf_probe.rs  postprocess.rs  preprocessor.rs  provider.rs
apps/desktop/src-tauri/src/rag/: commands.rs  mod.rs  retrieval.rs
apps/desktop/src-tauri/src/runtime/: mod.rs
apps/desktop/src-tauri/src/sync/: apply.rs  blobs.rs  commands.rs  engine.rs  http.rs  mod.rs  pull.rs  push.rs  test_support.rs
apps/desktop/src-tauri/src/sync/apply/: tests.rs
apps/desktop/src-tauri/src/sync/engine/: tests.rs
apps/desktop/src-tauri/src/transcription/: assemblyai.rs  commands.rs  engine.rs  mod.rs
apps/desktop/src/layout/: AppShell.svelte  AppShell.test.ts  DocumentExplorer.svelte  DocumentExplorer.test.ts  EntropicConstellation.svelte  EntropicConstellation.test.ts  TopBar.svelte  TopBar.test.ts
apps/desktop/src/lib/: db.ts  deps.ts  document-explorer.ts  file-import.ts  glossary.ts  i18n.test.ts  i18n.ts  item-metadata.test.ts  item-metadata.ts  item-view-annotation-persistence.test.ts  item-view-annotation-persistence.ts  item-view-llm-orchestration.test.ts  item-view-llm-orchestration.ts  item-view-notes.test.ts  item-view-notes.ts  item-view-search.test.ts  item-view-search.ts  item-view-text-persistence.test.ts  item-view-text-persistence.ts  keyboard.ts  llm.ts  navigation.test.ts  navigation.ts  nlp.test.ts  nlp.ts  ocr.test.ts  ocr.ts  processing-checklist.test.ts  processing-checklist.ts  rag.test.ts  rag.ts  settings.test.ts  settings.ts  sync.test.ts  sync.ts  transcription.test.ts  transcription.ts
apps/desktop/src/lib/components/: GlossaryHelpBtn.svelte  GlossaryTerm.svelte
apps/desktop/src/views/: CollectionAnalysisPanel.svelte  CollectionView.svelte  CollectionView.test.ts  CollectionsView.svelte  CollectionsView.test.ts  DbBrowserView.svelte  ItemAnalysisPanel.svelte  ItemAssetPanel.svelte  ItemLayoutPanel.svelte  ItemNotesPanel.svelte  ItemSearchPanel.svelte  ItemTextPanel.svelte  ItemView.svelte  ItemView.test.ts  LogsTab.svelte  RagChatView.svelte  RagChatView.test.ts  SettingsView.svelte  SettingsView.test.ts  SyncSettingsCard.svelte
apps/desktop/src/views/__mocks__/: MockDocumentViewer.svelte
