[package]
name = "entropia-lite-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "entropia_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
thiserror = "1"
pdf-extract = "0.7"
pdfium-render = "0.8"
image = "0.25"
imageproc = "0.25"
png = "0.18"
tokio = { version = "1", features = ["full"] }
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }
keyring = { version = "3", default-features = false, features = ["windows-native"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
urlencoding = "2"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = "2"
# Lite forbids local model inference/runtime dependencies. ML features use
# remote providers only: OpenRouter, GLM-OCR, and AssemblyAI.

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
default = []
