[package]
name = "entropia-lite-desktop"
version = "1.0.3"
edition = "2021"

[lib]
name = "entropia_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
pdfium-render = "0.8"
image = "0.25"
imageproc = "0.25"
png = "0.18"
tokio = { version = "1", features = ["full"] }
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls", "rustls-tls-native-roots"] }
urlencoding = "2"
sha2 = "0.10"
base64 = "0.22"
symphonia = { version = "0.5", features = ["all"] }
hound = "3"
# Lite forbids local model inference/runtime dependencies. ML features use
# remote providers only: OpenRouter, GLM-OCR, and AssemblyAI.

[dev-dependencies]
# Test-only: lets the sync MockSyncApi build a `reqwest::Response` from raw bytes
# for blob-download tests. Already in the tree transitively via reqwest 0.12.
http = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
keyring = { version = "3", default-features = false, features = ["sync-secret-service"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
default = []
